<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BodyMassIndex</string>
    <string name="title">Body Mass Index</string>

    <string name="label_weight">Weight</string>
    <string name="unit_weight">kg</string>
    <string name="placeholder_weight">e.g. 60 (maximum of 2 decimal places)</string>

    <string name="label_height">Height</string>
    <string name="unit_height">cm</string>
    <string name="placeholder_height">e.g. 170 (maximum of 2 decimal places)</string>

    <string name="btn_calculate">Calculate BMI</string>

    <string name="result_title">Your Body Mass Index</string>
    <string name="default_result">-</string>

    <string name="category_underweight">Underweight</string>
    <string name="category_normal">Normal</string>
    <string name="category_overweight">Overweight</string>
    <string name="category_obese">Obese</string>

    <string name="error_empty_input">Please enter all required information</string>
    <string name="error_invalid_input">Please enter valid numbers</string>

</resources>